package app;

public interface Item {
    String name();

    String brand();

    float price();
}
